--- a/src/css/main.css
+++ b/src/css/main.css
@@ -24,8 +24,9 @@
 @import "./footer-case.css";
 @import "./footer-features.css";
 @import "./services-menu.css";
-@import "./video.css";
+@import "./modal-video.css";
 @import "./plyr.css";
+@import "./player.css";
 
 @theme {
     --font-sans: 'Craftwork Sans', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
